Creada Api primera versión

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -25,6 +25,10 @@
     <!-- Morris Charts CSS -->
     <link href="{% static 'misvoti/css/plugins/morris.css' %}" rel="stylesheet">
 
+    <!-- Alertify CSS -->
+    <link href="{% static 'misvoti/css/plugins/alertify/alertify.css' %}" rel="stylesheet">
+    <link href="{% static 'misvoti/css/plugins/alertify/themes/bootstrap.css' %}" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="{% static 'misvoti/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
@@ -36,7 +40,6 @@
     <![endif]-->
     <!-- jQuery -->
 
-      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
       <script src="//code.jquery.com/jquery-1.12.4.js"></script>
       <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -52,6 +55,9 @@
     <script src="{% static 'misvoti/js/plugins/morris/raphael.min.js' %}"></script>
     <script src="{% static 'misvoti/js/plugins/morris/morris.min.js' %}"></script>
     <script src="{% static 'misvoti/js/plugins/morris/morris-data.js' %}"></script>
+
+    <!-- Alertify JavaScript -->
+    <script src="{% static 'misvoti/js/plugins/alertify/alertify.js' %}"></script>
 
     <!--Plugin para enviar archivo en el form de crear proyecto por ajax-->
     <script src="{% static 'misvoti/js/plugins/malsupform/jquery.form.js' %}"></script>
