--- a/planeador/templates/planeador/crear_plan.html
+++ b/planeador/templates/planeador/crear_plan.html
@@ -1,9 +1,6 @@
 {% extends 'misvoti/base.html' %}
 {% load static %}
 {% block inicio_pagina_scripts %}
-    <style>
-        .ajs-message.ajs-custom { color: #31708f;  background-color: #d9edf7;  border-color: #31708f; }
-    </style>
     <script>
 
         var btn_crear_plan = null;
@@ -172,40 +169,23 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="checkbox">
-                              <label>
-                                <input type="checkbox" class="form-component" value="" name="{{ form.construir_usando_pb.html_name }}">
-                                ¡Crea todos los trimestres de acuerdo al plan!
-                              </label>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="panel panel-info">
-                      <div class="panel-heading">
-                        <h3 class="panel-title">¿Desde cuando planeas comenzar(o comenzaste) tus estudios?</h3>
-                      </div>
-                      <div class="panel-body">
-                        <div class="form-group">
-                            <label class="control-label" for="id_select_{{ form.periodo_inicio.html_name }}">Periodo</label>
-                            <select class="form-control form-component"  name="{{ form.periodo_inicio.html_name }}" id="id_select_{{ form.periodo_inicio.html_name }}">
-                                {% for x,y in form.fields.periodo_inicio.choices %}
-                                    <option value="{{ x }}" {% if form.fields.periodo_inicio.value == x %} selected="selected" {% endif %}>{{ y }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label" for="id_select_{{ form.anyo_inicio.html_name }}">Año</label>
+                            <label class="control-label" for="id_select_{{ form.anyo_inicio.html_name }}">Año de inicio del plan</label>
                             <select class="form-control form-component"  name="{{ form.anyo_inicio.html_name }}" id="id_select_{{ form.anyo_inicio.html_name }}">
                                 {% for x,y in form.fields.anyo_inicio.choices %}
                                     <option value="{{ x }}" {% if form.fields.anyo_inicio.value == x %} selected="selected" {% endif %}>{{ y }}</option>
                                 {% endfor %}
                             </select>
                         </div>
+                        <div class="form-group">
+                            <div class="checkbox">
+                              <label>
+                                <input type="checkbox" class="form-component"  {% if form.construir_usando_pb.initial %} checked {% endif %}name="{{ form.construir_usando_pb.html_name }}" id="{{ form.construir_usando_pb.id_for_label }}">
+                                ¡Crea todos los trimestres de acuerdo al plan!
+                              </label>
+                            </div>
+                        </div>
                       </div>
                     </div>
-
                     <div class="panel panel-info">
                       <div class="panel-heading">
                         <h3 class="panel-title">¡Utilizar datos de mi expediente!</h3>
@@ -232,5 +212,4 @@
         </div>
     </div>
     <!-- /.row -->
-
 {% endblock %}
