Limitado el numero de planes a 1 El plan se guarda en el drive Agregado modificar materia

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -19,18 +19,22 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+    <!-- Alertify CSS -->
+    <link href="{% static 'misvoti/css/plugins/alertify/alertify.css' %}" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="{% static 'misvoti/css/sb-admin.css' %}" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
     <link href="{% static 'misvoti/css/plugins/morris.css' %}" rel="stylesheet">
 
-    <!-- Alertify CSS -->
-    <link href="{% static 'misvoti/css/plugins/alertify/alertify.css' %}" rel="stylesheet">
-    <link href="{% static 'misvoti/css/plugins/alertify/themes/bootstrap.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="{% static 'misvoti/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +46,6 @@
 
 
       <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
     <!-- Latest compiled and minified JavaScript -->
@@ -63,6 +66,9 @@
     <script src="{% static 'misvoti/js/plugins/malsupform/jquery.form.js' %}"></script>
 
     <script src="{% static 'misvoti/js/csrftokens.js' %}"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
 
 </head>
 
