--- a/planeador/templates/planeador/ver_plan.html
+++ b/planeador/templates/planeador/ver_plan.html
@@ -1,5 +1,11 @@
 {% extends 'misvoti/base.html' %}
+{% load as_json %}
+{% load gen_indice_for %}
 {% load static %}
+{% block inicio_pagina_scripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+    <link href="{% static 'planeador/css/ver_plan.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
     <!-- Page Heading -->
@@ -39,15 +45,156 @@
                   </div>
                 </div>
 
+
+
                 <div style="margin-top:30px;" id="div-trimestres">
-                        <!--Aquí se va a poner los datos del plan dinamicamente-->
+
+                    {% for trimestre in plan.trimestres %}
+                    {% gen_indice_for 'for_trimestre' as i_trimestre %}
+                        <div class='panel panel-success' data-trimestre-codigo="{{ i_trimestre }}">
+
+                            <div class="panel-heading" style="padding: 0px;">
+                                 <div class="input-group">
+                                     <h3 class="panel-title" style="padding-top: 9px;padding-left: 9px;">
+                                        {% if trimestre.periodo == "SD" %}
+                                           Septiembre - Diciembre
+                                        {% elif trimestre.periodo == "EM" %}
+                                           Enero - Marzo
+                                        {% elif trimestre.periodo == "AJ" %}
+                                           Abril - Julio
+                                        {% elif trimestre.periodo == "JA" %}
+                                           Julio - Agosto
+                                        {% else%}
+                                           {{ trimestre.periodo }}
+                                        {% endif %}
+                                        {{ trimestre.anyo }}
+                                     </h3>
+                                     <div class="input-group-btn">
+                                         <button type="button" onclick="on_click_boton_eliminar_trimestre(this)" class="btn btn-link">
+                                             <span class="glyphicon glyphicon-trash"></span>
+                                         </button>
+                                     </div>
+                                 </div>
+                             </div>
+
+                             <div class="panel-body" style="padding: 0px;">
+                                 <table class="table table-hover datos-trimestre">
+                                         <tr>
+                                             <th>Indice del Trimestre</th>
+                                             <td align='center' id='td-indice-periodo-{{ i_trimestre }}' >
+                                                 NC
+                                             </td>
+                                         </tr>
+                                         <tr>
+                                             <th >Indice Acumulado</th>
+                                             <td align='center' id='td-indice-acumulado-{{ i_trimestre }}' >
+                                                 NC
+                                             </td>
+                                         </tr>
+
+                                 </table>
+                             </div>
+
+                             <table class="table table-hover">
+
+                                 <thead>
+                                     <tr>
+                                         <th>Código</th>
+                                         <th >Nombre</th>
+                                         <th >Tipo</th>
+                                         <th>Creditos</th>
+                                         <th>Nota obtenida o ¿Retirada?</th>
+                                         <th></th>
+                                     </tr>
+                                 </thead>
+
+                                 <tbody class = "materias-trimestres">
+                                    {% for materia in trimestre.materias %}
+                                    {% gen_indice_for 'for_materia' as j_materia %}
+                                        <tr data-materia-codigo = "{{ j_materia }}">
+                                            {% if materia.codigo %}
+                                                <td> {{ materia.codigo }} </td>
+                                            {% else %}
+                                                <td><abbr title='Sin Definir '>Sin.Defi.</abbr> </td>
+                                            {% endif %}
+
+                                            {% if materia.nombre %}
+                                                <td> {{ materia.nombre }} </td>
+                                            {% else %}
+                                                <td><abbr title='Sin Definir '>Sin.Defi.</abbr> </td>
+                                            {% endif %}
+
+                                           <td>
+                                               {% if materia.tipo == "GE" %}
+                                                   General
+                                               {% elif materia.tipo == "EL" %}
+                                                   Electiva libre
+                                               {% elif materia.tipo == "EA" %}
+                                                   Electiva Area
+                                               {% elif materia.tipo == "RG" %}
+                                                   Regular
+                                               {% elif materia.tipo == "EX" %}
+                                                   Extraplan
+                                               {% else %}
+                                                   {{materia.tipo}}
+                                               {% endif %}
+                                            </td>
+
+                                            <td> {{ materia.creditos }} </td>
+
+                                            <td>
+                                               <select class="selectpicker  show-tick show-menu-arrow"  title="Escoja una opción." onchange="on_change_select_nota_final(this)">
+                                                    <optgroup label="Posibles Notas">
+                                                        <option {% if materia.nota_final == 1 %} selected {% endif %}>  1 </option>
+                                                        <option {% if materia.nota_final == 2 %} selected {% endif %}>  2 </option>
+                                                        <option {% if materia.nota_final == 3 %} selected {% endif %}>  3 </option>
+                                                        <option {% if materia.nota_final == 4 %} selected {% endif %}>  4 </option>
+                                                        <option {% if materia.nota_final == 5 %} selected {% endif %}>  5 </option>
+                                                    </optgroup>
+                                                    <optgroup label="¿Está retirada?">
+                                                       <option title="Retirada"  {% if materia.esta_retirada %} selected {% endif %} value='R'> Retirada </option>
+                                                    </optgroup>
+                                                </select>
+                                            </td>
+                                           <td align="right" style="padding:0px;">
+                                               <div class="input-group-btn">
+                                                   <button type="button" onclick="on_click_boton_eliminar_materia(this)" class="btn btn-link" >
+                                                       <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                                   </button>
+                                                   <button type="button"  data-toggle="modal" data-target="#modal-materia"  data-action="editar" class="btn btn-link" >
+                                                       <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                                   </button>
+                                               </div>
+                                            </td>
+
+                                        </tr>
+
+                                    {% endfor %}
+                                 </tbody>
+                             </table>
+
+                             <div class="panel-footer">
+                                 <button type="button" data-toggle="modal" data-target="#modal-materia" class="btn btn-link">
+                                     <span class="glyphicon glyphicon-plus"  style="margin-left: 4px"></span>
+                                 </button>
+                             </div>
+
+                        </div>
+                    {% endfor %}
+
                 </div>
+
+
+                <div style="width:185px;margin:auto;" >
+                    <button  type="button" data-toggle="modal" data-target="#modal-agregar-trim"  class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ¡Agregar Trimestre!</button>
+                </div>
+
             </fieldset>
         </div>
     </div>
     <!-- /.row -->
 
-    {% include 'planeador/modal_agregar_materia.html' %}
+    {% include 'planeador/modal_materia.html' %}
     {% include 'planeador/modal_agregar_trimestre.html' %}
 
 {% endblock %}
@@ -55,14 +202,17 @@
 {% block final_pagina_scripts %}
     <script>
         var path_image_gear = "{% static 'misvoti/images/gears.svg' %}";
-        var path_image_flecha_up = "{% static 'misvoti/images/ic_trending_up_black_24px.svg' %}"
-        var path_image_flecha_same = "{% static 'misvoti/images/ic_trending_flat_black_24px.svg' %}"
-        var path_image_flecha_down = "{% static 'misvoti/images/ic_trending_down_black_24px.svg' %}"
-    </script>
+        var path_image_flecha_up = "{% static 'misvoti/images/ic_trending_up_black_24px.svg' %}";
+        var path_image_flecha_same = "{% static 'misvoti/images/ic_trending_flat_black_24px.svg' %}";
+        var path_image_flecha_down = "{% static 'misvoti/images/ic_trending_down_black_24px.svg' %}";
 
+        var tipos_materia = [['GE','General'],['EL','Electiva libre'],['EA','Electiva de Area'],['RG','Regular'],['EX','Extraplan'],];
+        var plan_creado_json = {{ plan | as_json}};
+
+    </script>
 
     <script src="{% static 'planeador/js/ver_plan.js' %}"></script>
     <script>
-        cargar_datos_plan({{ plan.id }});
+        actualizar_datos_plan_creado();
     </script>
 {% endblock %}
