Agregado requerimientos.txt Agregado README

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -114,7 +114,7 @@
                     </li>
 {% endcomment %}
                     <li class="{{ planes_activo }}">
-                        <a href="{% url 'planes' %}"><i class="fa fa-fw fa-table"></i> Planes</a>
+                        <a href="{% url 'planes' %}"><i class="fa fa-fw fa-table"></i> Plan</a>
                     </li>
                 </ul>
             </div>
