--- a/planeador/templates/planeador/vista_principal_plan.html
+++ b/planeador/templates/planeador/vista_principal_plan.html
@@ -1,15 +1,16 @@
 {% extends 'misvoti/base.html' %}
+{% load as_json %}
 
 {% block inicio_pagina_scripts %}
     <script>
-        var n_planes = {{ n_planes }};
+        var plan = {{ plan | as_json}};
         var div_alert_sin_planes ;
 
         $(document).ready(function() {
 
             div_alert_sin_planes = $("#alert-sin-planes");
 
-            if(n_planes <= 0){
+            if(plan != undefined){
                 div_alert_sin_planes.show();
             }else{
                 div_alert_sin_planes.hide();
@@ -23,11 +24,11 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                Lista de Planes
+                Mi Plan
             </h1>
             <ol class="breadcrumb">
                 <li class="active">
-                    <i class="fa fa-table"></i> Planes
+                    <i class="fa fa-table"></i> Plan
                 </li>
             </ol>
         </div>
@@ -36,40 +37,42 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 style="display: inline-block;">Planes Creados</h2>
-            <a href="{% url 'crear_plan' %}" class="btn btn-primary" role="button" style="margin-left: 10px;">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                Crear Nuevo Plan
-            </a>
+
+            <h2 style="display: inline-block;"><strong> Nombre del plan:</strong> {{ plan.nombre }} </h2>
+
             <hr>
-            {%  for plan in planes %}
-                <div class="panel panel-primary">
-                  <div class="panel-heading">
-                    <h3 class="panel-title"> <strong> Nombre del plan:</strong> {{ plan.nombre }}</h3>
-                  </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <strong>Indice Acumulado:</strong> {{ plan.datos.indice }}
-                            </div>
-                            <div class="col-md-3">
-                                <strong>Retiros:</strong> {{ plan.datos.n_retiros }}
-                            </div>
-                            <div class="col-md-3">
-                                <strong>Trimestres:</strong> {{ plan.datos.n_trimestres }}
-                            </div>
-                            <div class="col-md-3">
-                                <strong>Creditos Inscritos:</strong> {{ plan.datos.creds_inscri }}
-                            </div>
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title"> <strong> Nombre del plan:</strong> {{ plan.nombre }}</h3>
+              </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <strong>Indice Acumulado:</strong> {{datos.indice }}
+                        </div>
+                        <div class="col-md-3">
+                            <strong>Retiros:</strong> {{datos.n_retiros }}
+                        </div>
+                        <div class="col-md-3">
+                            <strong>Trimestres:</strong> {{datos.n_trimestres }}
+                        </div>
+                        <div class="col-md-3">
+                            <strong>Creditos Inscritos:</strong> {{datos.creds_inscri }}
                         </div>
                     </div>
-                    <div class="panel-footer">
-                         <a href="{% url 'ver_plan' plan.nombre %}" role="button">Modificar</a>
-                        <button type="button" class="btn btn-link" data-accion="eliminar-plan" data-plan-nombre = "{{ plan.nombre }}" data-plan-id = "{{ plan.id }}">Eliminar</button>
-                    </div>
                 </div>
-            {% endfor %}
-                <div class="alert alert-info" role="alert" id="alert-sin-planes"><p><strong> Hey!</strong> No posees ningún plan :(</p></div>
+                <div class="panel-footer">
+                     <a href="{% url 'ver_plan' %}" role="button">Modificar</a>
+                    <button type="button" class="btn btn-link" data-accion="eliminar-plan" data-plan-nombre = "{{ plan.nombre }}" data-plan-id = "{{ plan.id }}">Eliminar</button>
+                </div>
+            </div>
+            <div class="alert alert-info" role="alert" id="alert-sin-planes">
+                <p><strong> Hey!</strong> No posees ningún plan :(</p>
+                <a href="{% url 'crear_plan' %}" class="btn btn-primary" role="button" style="margin-left: 10px;">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        Crear Nuevo Plan
+                </a>
+            </div>
         </div>
     </div>
     <!-- /.row -->
