Arreglado problemas en el inicio del entorno

--- a/planeador/templates/planeador/crear_plan.html
+++ b/planeador/templates/planeador/crear_plan.html
@@ -52,7 +52,7 @@
         }
 
         function redirigir_plan_creado(nombre_plan) {
-            window.location.replace("{% url 'planes'%}" + nombre_plan);
+            window.location.replace("{% url 'ver_plan'%}");
         }
         $(document).ready(function(){
 
