Agregado Permiso para el api planes creados

--- a/planeador/templates/planeador/vista_principal_plan.html
+++ b/planeador/templates/planeador/vista_principal_plan.html
@@ -101,6 +101,7 @@
                                 setTimeout("location.reload()", 500);
                             },
                             error:function (request, status, error) {
+                                msg_eliminando.dismiss();
                                 console.log(status,error);
                                 alertify.error('Ocurrió un error eliminando el plan: ' + nombre_plan)
                             },
