Arreglado Agregar Materia y Guardar Modificación Plan

--- a/planeador/templates/planeador/ver_plan.html
+++ b/planeador/templates/planeador/ver_plan.html
@@ -214,5 +214,47 @@
     <script src="{% static 'planeador/js/ver_plan.js' %}"></script>
     <script>
         actualizar_datos_plan_creado();
+
+        // Listener para cuando se clickea el boton de guardar
+        // El cual hace que se mande al servidor el estado del plan que maneja el cliente
+        // Actualizandolo
+        btn_guardar_cambios.click(function () {
+
+            // Desactivamos los select que permiten al usuario cambiar la nota de las materias
+            // Para cada select en la tabla
+
+            fieldset.attr("disabled","disabled");
+
+            // Desactivamos el boton de guardar
+            btn_guardar_cambios.text("Guardando Cambios...");
+
+            // Mandamos los datos al servidor
+            // Notar que mandamos un json de la forma
+            // { "datos":json que el servidor nos manda}
+            // Se manda de esta forma por varios errores que daba django
+            var msg_actualizando_plan = alertify.notify('Actualizando <img src=' + path_image_gear + '  style="width: 40px;height:40px;">','custom',0,null);
+
+            $.ajax({
+                url:"{% url 'api:userplan-detail' request.user.username %}",
+                type: 'POST',
+                data:JSON.stringify(plan_creado_json),
+                success: function(data,status,request) {
+                    alertify.success('¡Plan actualizado!');
+                    btn_guardar_cambios.text("¡Cambios Guardados!");
+                    btn_guardar_cambios.attr("disabled","disabled")
+                },
+                error:function (request, status, error) {
+                    console.log(status,error);
+                    alertify.error('Ocurrió un error actualizando el plan :(');
+                    btn_guardar_cambios.text("Guardar Cambios*");
+                },
+                complete:function (request,status) {
+                    fieldset.removeAttr("disabled");
+                    msg_actualizando_plan.dismiss();
+                },
+                contentType:'application/json; indent=4;charset=UTF-8',
+            });
+
+        });
     </script>
 {% endblock %}
