--- a/misvoti/static/misvoti/css/sb-admin.css
+++ b/misvoti/static/misvoti/css/sb-admin.css
@@ -8,7 +8,7 @@
 
 body {
     margin-top: 100px;
-    background-color: #222;
+    background-color: #16A085;
 }
 
 @media (min-width: 768px) {
@@ -122,7 +122,7 @@ ul.alert-dropdown {
         border: none;
         border-radius: 0;
         overflow-y: auto;
-        background-color: #222;
+        background-color: #16A085;
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
