--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -1,9 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +10,10 @@
     <meta name="author" content="Manuel González">
 
     <title>Pensubito - Control de estudios</title>
+	<link rel="icon" type="image/png" href="{% static 'misvoti/images/icons/favicon.ico' %}"/>
 
     <link rel="stylesheet" href={% static 'bootstrap/dist/css/bootstrap.min.css' %}>
+
     <link rel="stylesheet" href={% static 'bootstrap/dist/css/bootstrap-theme.min.css' %}>
 
     <!-- Font Awesome -->
