--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -18,7 +18,7 @@
           </h1>
           <ol class="breadcrumb">
             <li>
-                <i class="fa fa-table"></i>  <a href="{% url 'planes' %}">Planes</a>
+                <i class="fa fa-table"></i>  <a href="{% url 'ver_plan' %}">Mi plan</a>
             </li>
             <li class="active">
                 <i class="fa fa-table"></i> {{ plan.nombre }}
